--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -46,11 +46,16 @@
 			}
 		},
 		"models": {
-				"i18n": {
-					"type": "sap.ui.model.resource.ResourceModel",
-					"settings": {
-						"bundleName": "opensap.myapp.i18n.i18n"
-					}
+			"address": {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "model/Address.json"
+			},
+
+			"i18n": {
+				"type": "sap.ui.model.resource.ResourceModel",
+				"settings": {
+					"bundleName": "opensap.myapp.i18n.i18n"
+				}
 			},
 
 			"helloPanel": {
