--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -9,7 +9,18 @@
 		"description": "{{appDescription}}",
 		"applicationVersion": {
 			"version": "1.0.0"
+		},
+
+		"dataSources": {
+			"ES5": {
+				"uri": "/destinations/ES5/sap/opu/odata/IWBEP/GWSAMPLE_BASIC/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
+				}
+			}
 		}
+
 	},
 	"sap.ui": {
 		"_version": "1.3.0",
@@ -61,7 +72,12 @@
 			"helloPanel": {
 				"type": "sap.ui.model.json.JSONModel",
 				"uri": "model/HelloPanel.json"
+			},
+
+			"": {
+				"dataSource": "ES5"
 			}
+
 		},
 
 		"contentDensities": {
